<resources>
    <string name="app_name">Topik 4 Chap 2</string>
    
<!--    layout 1 custom string-->
    <string name="super_admin">Super Admin</string>
    <string name="tamyiz">Tamyiz</string>
    <string name="transaksi_buku">Transaksi Buku</string>
    <string name="transaksi_pesantren_bulanan">Transaksi Pesantren Bulanan</string>
    <string name="transaksi_penjualan_buku">Transaksi Penjualan Buku</string>
    <string name="data_buku_dua">Data Buku II Tambah Data</string>
    <string name="data_piutang_buku">Data Piutang Buku</string>
    <string name="laporan_penjualan_buku">Laporan Penjualan Buku</string>
    <string name="pendaftaran_santri_baru">Pendaftaran Santri Baru</string>
    <string name="kas">KAS (D/K)</string>
    <string name="data_piutang_bulanan">Data Pituang Bulanan</string>
    <string name="laporan_keuangan">Laporan Keuangan</string>
    <string name="username">Your username</string>
    <string name="id_user">ID USER</string>
    <string name="nu_ll">Null</string>
    <string name="email">Email</string>
    <string name="desc_layout2_page3"><![CDATA[Masuk ke Pengaturan. Cari Hidupkan/matikan layar pintar > hidupkan Angkat untuk membangunkan. Kemudian layar akan secara otomatis bangun ketika Anda mengangkat telepon dari permukaan datar.]]></string>
    <string name="title_layout2_page3">Bagaimana Cara menggunakan Angkat untuk Membangunkan di Telepon?</string>
    <string name="read_count_layout2_page3">1291K</string>
</resources>