<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/grey_bg">

    <RelativeLayout
        android:id="@+id/rl_satu"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:background="@drawable/shape_layout_dua">

        <LinearLayout
            android:id="@+id/ll_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_centerVertical="true"
            android:layout_marginLeft="50dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Profil"
                android:textColor="@color/blue_font"
                android:textSize="40sp"
                android:textStyle="bold"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="e"
                android:textColor="@color/orange_bg"
                android:textSize="40sp"
                android:textStyle="bold"/>
        </LinearLayout>

        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_alignParentEnd="true"
            android:layout_centerInParent="true"
            android:layout_marginLeft="50dp"
            android:layout_toRightOf="@+id/ll_profile"
            android:src="@drawable/ic_baseline_qr_code_24" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_dua"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="100dp"
        android:layout_marginTop="200dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp">

        <TextView
            android:id="@+id/tv_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:fontFamily="@font/poppins_medium"
            android:layout_margin="30dp"/>

        <RelativeLayout
            android:id="@+id/rl_username"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/bg_text_view"
            android:layout_below="@+id/tv_username">

            <TextView
                android:id="@+id/tv_id_user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/id_user"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dp"
                android:textColor="@color/black"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/tv_null"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nu_ll"
                android:textColor="@color/black"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true"
                android:layout_marginRight="20dp"/>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_email"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/rl_username"
            android:layout_marginTop="20dp"
            android:background="@drawable/bg_text_view">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:text="@string/email"
                android:textColor="@color/black"
                android:textStyle="bold" />

        </RelativeLayout>

        <Button
            android:id="@+id/btn_logout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rl_email"
            android:layout_marginTop="50dp"
            android:text="logout"
            android:background="@drawable/bg_button"/>


    </RelativeLayout>


    <com.google.android.material.bottomappbar.BottomAppBar
        android:id="@+id/bottom_app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        app:fabCradleMargin="10dp"
        app:fabCradleRoundedCornerRadius="10dp"
        app:fabCradleVerticalOffset="10dp"
        tools:ignore="BottomAppBar">

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottom_navigation_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:menu="@menu/bottom_navbar_layout_dua"
            android:layout_marginRight="16dp"
            android:background="@drawable/transparant_background"/>

    </com.google.android.material.bottomappbar.BottomAppBar>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floating_action_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/orange_bg"
        android:src="@drawable/ic_baseline_payment_24"
        app:layout_anchor="@id/bottom_app_bar"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>